--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ db/convicts_bk.db
 .rvmrc.05.09.2011-20:09:38
 .rvmrc.05.09.2011-20:09:39
 config/database.yml
+public/index.html
+public/home/about.html
