--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ public/index.html
 public/home/about.html
 public/data/names.html
 .sass-cache/*
+config/rubber/instance-production.yml
+config/rubber/rubber-secret.yml
