Update rubber script to make deployment work

--- a/config/rubber/rubber.yml
+++ b/config/rubber/rubber.yml
@@ -70,7 +70,7 @@ cloud_providers:
     # Ubuntu 10.04 Lucid	base install	64-bit	ami-fa01f193
     #
     # m1.small or m1.large or m1.xlarge
-    image_type: m1.small
+    image_type: t1.micro
     image_id: ami-44f18916
 
     # OPTIONAL: EC2 spot instance request support.
